Allow testing for different JVM versions and implementations (#187)
---------

Co-authored-by: SylvainJuge <763082+SylvainJuge@users.noreply.github.com>