@@ -21,6 +21,7 @@ package co.elastic.otel.profiler;
 import static org.assertj.core.api.Assertions.assertThat;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import org.junit.jupiter.api.Test;
 
@@ -46,6 +47,6 @@ class ThreadMatcherTest {
           }
         },
         threads);
-    assertThat(threads).isEqualTo(List.of(Thread.currentThread()));
+    assertThat(threads).isEqualTo(Arrays.asList(Thread.currentThread()));
   }
 }
